--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1>Квартирные переезды</h1>
                     <h2 class="h2">По Бресту и области</h2>
                     <a class="butta" href="#"><div class="button1">Заказать</div></a>
-                    <ul>
+                    <ul class="header-bottom__ul">
                         <li class="header-bottom__text li-text">Более 800 переездов</li>
                         <li class="header-bottom__text li-text">Бережная упаковка</li>
                         <li class="header-bottom__text li-text">Фиксированная цена</li>
